--- a/integration/index.html
+++ b/integration/index.html
@@ -18,9 +18,9 @@
     
     <body class="body">
 
-        <header class="row-nav">
+        <header class="row_nav">
 
-            <img class="logo" type="text/html" href="./images/Logo/Copie de DK.ENERGY logo (1).png" alt="logo">
+            <img class="row_nav_logo" src="./images/Logo/Copie de DK.ENERGY logo (1).png" alt="logo">
 
             <nav class="nav-content">
                 <a class="nav-content-items"  href="#NotreMétier"> Notre métier</a>
@@ -36,10 +36,8 @@
                 <div class="Qui-sommes-nous">
 
                     <div class="Qui-sommes-nous-paragraphe">
-                        <h1 class="QSN-titre">Qui sommes nous ?</h1>
-                        <p class="QSN-titre">Lorem ipsum, dolor sit amet       consectetur adipisicing elit. Beatae qui
-                        cupiditate inventore deserunt fuga a ducimus unde corporis fugiat quasi obcaecati impedit
-                        repellendus libero tempora voluptates dolor corrupti, facere maxime.</p>
+                        <h1 class="QSN-titre">DK.ENERGY au service de vos ambitions</h1>
+                        <p class="QSN-titre">DK.ENERGY est expert de la vente à domicile, de l'animation et la promotion des ventes depuis plus de 10 ans. Nous mettons notre SAVOIR-FAIRE au service de VOS AMBITIONS commerciales. DK.ENERGY vous assure, la PERFORMANCE, la SOUPLESSE, et le CONFORT d'une force de vente externalisée.  </p>
                     </div>
 
                     <div class="Qui-sommes-nous-image">
@@ -57,12 +55,22 @@
 
                     <div class="Notre-métier-paragraphe">
 
-                        <h1 class="NM-titre">Notre métier</h1>
+                        <h1 class="NM-titre">Notre métier : Recruter, Former, Animer</h1>
 
                         <p class="NM-titre">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum officiis ducimus recusandae
-                            reprehenderit veniam aut fuga commodi nihil sequi quas reiciendis soluta, dignissimos quasi
-                            assumenda. Assumenda atque suscipit doloremque commodi!
+                            Afin de PERFORMER, la rigueur, et l'implication de nos managers autour de ses trois axes primordiaux est essentiel pour créer une synergie autour d'un me objectif : LA PERFORMANCE.
+                        </p>
+
+                        <p> 
+                            Recruter : La recherche permanente de talents et de profils ambitieux nous places parmi les sociétés les plus agiles dans le Sud-ouest sur le sujet. Nous sommes dans une optique d'intégration et de performance à long terme pour nos collaborateurs. 
+                        </p>
+
+                        <p> 
+                            Former : Management de proximité et formation continue sont les clés de la réussite dans l'épanouissement de nos équipes.  
+                        </p>
+
+                        <p> 
+                            Animer : Challenges, cadeaux, rémunération, et cohésion d'équipes font partis du panel d'outils utilisées par nos managers afin de repousser toujours plus loin la puissance et la performance de notre force de vente.   
                         </p>
 
                     </div>
@@ -81,22 +89,26 @@
                             <h2>
                                 Écoute
                             </h2>
-                            <img class="Icons-images" src="./images/Nos valeurs/nocouleurs/écoute-black.png" alt="Écoute">
-                        </div>
-
-                        <div class="Icons-paragraphe">
-                            <h2>
-                                Ésprit d'équipe
-                            </h2>
-                            <img class="Icons-images" src="./images/Nos valeurs/nocouleurs/work-teams.png" alt="Esprit d'équipe">
+                            <p>  L'Écoute active de nos clients grands comptes et des prospects permet de répondre au mieux à leurs besoins</p>
                         </div>
 
                         <div class="Icons-paragraphe">
                             <h2>
                                 Satisfaction client
                             </h2>
-                            <img class="Icons-images" src="./images/Nos valeurs/nocouleurs/satisafction-client-black.png" alt="Satisfaction client">
+                            <p> 
+                               Un client satisfait est un client qui recommande. Il est donc essentiel, de l'accompagner et de le conseiller dans sa démarche d'économie d'énergie.  
+                            </p>
                         </div>
+                        <div class="Icons-paragraphe">
+                            <h2>
+                                Esprit d'équipe
+                            </h2>
+                            <p> 
+                                Un client satisfait est un client qui recommande.  Il est donc essentiel, de l'accompagner et de le conseiller dans sa démarche d'économie d'énergie.
+                            </p>
+                        </div>
+
 
                     </div>
                 </div>
@@ -106,23 +118,30 @@
                     <div>
                         <div class = "Nos-postes-paragraphe">
                             <h2 class="h2"> Commercial</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, repellat!
-                            </p>
+                            <ul>
+                                <li>Optimiste, perseverent(e), enthousiaste.</li>
+                                <li>Démarche au service de nos clients grands comptes.</li>
+                                <li>Se dépasse et donne son maximum afin de performer.</li>
+                                <li>Promus l'image de marque de notre société.</li>
+                            </ul>
                             <a class="postuler-nos-postes" href = "#forms"> Postuler</a>
                         </div>
                         <div class = "Nos-postes-paragraphe">
                             <h2 class="h2"> Chef d'équipe </h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, repellat!
-                            </p>
+                            <ul>
+                                <li>Forme et anime nos équipes commerciales</li>
+                                <li> Garant(e) de l'image de marque de l'entreprise </li>
+                                <li>Manage au plus près des commerciaux.</li>
+                            </ul>
                             <a class="postuler-nos-postes" href = "#forms"> Postuler</a>
                         </div>
                         <div class = "Nos-postes-paragraphe">
                             <h2 class="h2"> Directeur d'agence </h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, repellat!
-                            </p>
+                            <ul>
+                                <li>Manage les chefs d'équipes et leur effectifs</li>
+                                <li>Responsable des objectifs de son agence</li>
+                                <li>Forme et anime les équipes et veille à la cohésion d'équipe.</li>
+                            </ul>
                             <a class="postuler-nos-postes" href = "#forms"> Postuler</a>
                         </div>
                     </div>
