--- a/integration/index.html
+++ b/integration/index.html
@@ -20,7 +20,7 @@
 
         <header class="header">
 
-            <img class="logo" src="./images/Logo/Copie de DK.ENERGY logo (1).png" alt="logo">
+            <img class="header__logo" src="./images/Logo/Copie de DK.ENERGY logo (1).png" alt="logo">
 
             <nav class="menu">
                 <a class="items"  href="#NotreMétier"> Notre métier</a>
