responsive nav & style

--- a/integration/index.html
+++ b/integration/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DK.ENERGY</title>
     
-    <link rel="stylesheet"  href="reset.css">
+    <link rel="stylesheet"  href="reset.scss">
     <link rel="stylesheet"  href="style.css">
     
    
@@ -20,6 +20,7 @@
 
         <header class="header">
 
+            <a href="#" class="header__icon"></a>
             <img class="header__logo" src="./images/Logo/Copie de DK.ENERGY logo (1).png" alt="logo">
 
             <nav class="menu">
