--- a/integration/index.html
+++ b/integration/index.html
@@ -7,7 +7,7 @@
     <!-- La ligne du dessu permet de bloquer l'apllication zoom et dezzom en mode mobile. Cela permet au site d'être vraiment utilisé comme une app mobile -->
     <title>DK.ENERGY</title>
     
-    <link rel="stylesheet"  href="reset.scss">
+    <link rel="stylesheet"  href="reset.css">
     <link rel="stylesheet"  href="style.css">
     
    
