--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <header class="header">
                 <a href="#" class="header__icon" id="header__icon"></a>                
                 <nav class="menu">
-                    <a class="items" href="#notre-métier"> Notre métier</a>
+                    <a class="items" href="#NotreMétier"> Notre métier</a>
                     <!-- onclick="$('html,body').animate({scrollTop: $('#NotreMétier').offset().top},1000);" -->
                     <a class="items"  href="#NosValeurs"> Nos valeurs</a>
                     <a class="items" href="#NosPostes"> Nos postes</a>
@@ -38,7 +38,7 @@
                 </div>
                 
                 <div  class="Article-notre-métier">
-                    <h1 id="notre-métier" class="NM-titre">Notre métier : Recruter, Former, Animer</h1>
+                    <h1 id="NotreMétier" class="NM-titre">Notre métier : Recruter, Former, Animer</h1>
                     <div class="Notre-métier-paragraphe">
                         <p class="NM-titre">
                            Vous êtes la principale force de ventes de DK Energy, vous avez un objectif défini et vous vous donnez les moyens de l'atteindre. DK Energy est spécialiste de la force de vente externalisé, avec pour cible les clients particuliers.
