--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="site-container">
         <div class="site-pusher">
             <header class="header">
-                <img class="header__img" src="/images/Logo/Copie de DK.ENERGY logo (1).png" alt="">
+                <img class="header__img" src="./images/Logo/Copie de DK.ENERGY logo (1).png" alt="logo">
                 <a href="#" class="header__icon" id="header__icon"></a>
                 <nav class="menu">
                     <a class="items" href="#NotreMétier"> Notre métier</a>
@@ -48,25 +48,26 @@
 
                 <div id="NotreMétier" class="Notre-métier">
                     <div class="Notre-métier-paragraphe">
-                        <h1 class="NM-titre">Notre métier : Recruter, Former, Animer</h1>
+                        <h1 class="NM-titre Nm-titre-h1">Notre métier </h1>
+                        <h2  style="font-weight:normal;">Recruter, Former, Animer</h2>
 
                         <p class="NM-titre">
                             Afin de performer, la rigueur, et l'implication de nos managers autour de ses trois axes est essentielle pour créer une synergie autour d'un même objectif : la performance.
                         </p>
 
                         <p>
-                            Recruter : la recherche permanente de talents et de profils ambitieux nous place parmi les
+                            <span style="font-weight:bold;text-transform: none;">Recruter</span> : la recherche permanente de talents et de profils ambitieux nous place parmi les
                             sociétés les plus agiles sur le sujet dans le Sud-ouest. Nous sommes dans une optique
                             d'intégration et de performance à long terme pour tous nos collaborateurs.
                         </p>
 
                         <p>
-                            Former : le management de proximité et la formation continue sont les clés de 
+                            <span style="font-weight:bold;text-transform: none;">Former</span> :  le management de proximité et la formation continue sont les clés de 
                             l'épanouissement de nos équipes.
                         </p>
 
                         <p>
-                            Animer : challenges, cadeaux, rémunération, et cohésion d'équipe font partie du panel
+                            <span style="font-weight:bold;text-transform: none;">Animer</span> :  challenges, cadeaux, rémunération, et cohésion d'équipe font partie du panel
                             d'outils utilisés par nos managers afin de repousser toujours plus loin la puissance et la
                             performance de notre force de vente.
                         </p>
